--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,6 +1,6 @@
 name: Autograding Tests
 'on':
-- push
+- workflow_dispatch
 - repository_dispatch
 permissions:
   checks: write
@@ -15,13 +15,11 @@ jobs:
       uses: actions/checkout@v4
     - name: Test
       id: test
-      uses: classroom-resources/autograding-command-grader@v1
+      uses: classroom-resources/autograding-python-grader@v1
       with:
-        test-name: Test
-        setup-command: pip3 install -r requirements.txt
-        command: python3 test.py
         timeout: 10
         max-score: 1
+        setup-command: pip3 install -r requirements.txt
     - name: Autograding Reporter
       uses: classroom-resources/autograding-grading-reporter@v1
       env:
