--- a/.github/workflows/classroom.yml
+++ b/.github/workflows/classroom.yml
@@ -1,30 +1,43 @@
-name: Autograding Tests
-'on':
-- push
-- repository_dispatch
-permissions:
-  checks: write
-  actions: read
-  contents: read
+name: Procesamiento de Datos y Creación de Datasets
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+
 jobs:
-  run-autograding-tests:
+  build:
     runs-on: ubuntu-latest
-    if: github.actor != 'github-classroom[bot]'
+    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    - name: Test modificado
-      id: test-modificado
-      uses: classroom-resources/autograding-command-grader@v1
+    - uses: actions/checkout@v2
+    
+    - name: Configurar Python
+      uses: actions/setup-python@v2
       with:
-        test-name: Test modificado
-        setup-command: pip3 install -r requirements.txt
-        command: python3 test.py
-        timeout: 10
-        max-score: 1
-    - name: Autograding Reporter
-      uses: classroom-resources/autograding-grading-reporter@v1
-      env:
-        TEST-MODIFICADO_RESULTS: "${{steps.test-modificado.outputs.result}}"
-      with:
-        runners: test-modificado
+        python-version: '3.8'
+    
+    - name: Instalar dependencias
+      run: |
+        python -m pip install --upgrade pip
+        pip install pandas
+    
+    - name: Mostrar estructura de directorios
+      run: |
+        pwd
+        ls -R
+    
+    - name: Ejecutar script de creación de datasets
+      run: python pregunta.py
+    
+    - name: Verificar creación de archivos CSV
+      run: |
+        if [ -f train_dataset.csv ] && [ -f test_dataset.csv ]; then
+          echo "Los archivos CSV se han creado correctamente."
+          ls -l *.csv
+        else
+          echo "Error: No se encontraron los archivos CSV esperados."
+          ls -l
+          exit 1
+        fi
